Se agrego un onclick

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <p class="parrafo">Esto tambien es hermoso con clase</p>
     <p id="pid"> Mera cagada con id</p>
 
-    <input type="text" placeholder="Dale papa">
+    <input id="calculo1" placeholder="Dale papa">
+    <input id="calculo2" placeholder="Dale papa">
+    <button id="btn-calcular" onclick="btnOnClick()">Cacular</button>
 
     <script src="./script.js"></script>
+
+    <p id="respuesta1"></p>
 </body>
 </html>
